--- a/index.html
+++ b/index.html
@@ -66,7 +66,13 @@
             alt="Screenshot of 'Where ISS It?'"
           />
         </a>
-        <img />
+        <a href="https://guardian-guide-1222.herokuapp.com/" target="_blank">
+          <img
+            class="project-img"
+            src="assets/Project_2_Screenshot.png"
+            alt="Screenshot of 'Guardian Guide'"
+          />
+        </a>
         <img />
       </div>
     </section>
